--- a/Headshot-ios/AccountViewController.xib
+++ b/Headshot-ios/AccountViewController.xib
@@ -19,29 +19,39 @@
             <rect key="frame" x="0.0" y="64" width="320" height="504"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView appearanceType="aqua" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jIl-kY-jHF">
+                <scrollView appearanceType="aqua" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jIl-kY-jHF">
                     <rect key="frame" x="0.0" y="0.0" width="325" height="504"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OPr-ki-3YV">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OPr-ki-3YV">
                             <rect key="frame" x="108" y="0.0" width="105" height="105"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="105" id="2zg-iV-xSZ"/>
+                                <constraint firstAttribute="height" constant="105" id="Y67-dQ-iSn"/>
+                            </constraints>
                         </imageView>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IJO-Kd-x7x">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IJO-Kd-x7x">
                             <rect key="frame" x="0.0" y="113" width="320" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="21" id="xSB-CV-fag"/>
+                            </constraints>
                             <fontDescription key="fontDescription" name="Whitney-Medium" family="Whitney" pointSize="24"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5sH-6e-1Sy">
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5sH-6e-1Sy">
                             <rect key="frame" x="0.0" y="141" width="320" height="16"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="16" id="jhk-nP-0p6"/>
+                            </constraints>
                             <fontDescription key="fontDescription" name="Whitney-Medium" family="Whitney" pointSize="12"/>
                             <color key="textColor" red="0.65098039215686276" green="0.65098039215686276" blue="0.65098039215686276" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <tableView appearanceType="aqua" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="1Ki-yv-G98">
+                        <tableView appearanceType="aqua" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="1Ki-yv-G98">
                             <rect key="frame" x="0.0" y="202" width="320" height="302"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -55,10 +65,12 @@
                         <constraint firstAttribute="trailing" secondItem="IJO-Kd-x7x" secondAttribute="trailing" constant="5" id="6nw-K3-AjZ"/>
                         <constraint firstItem="IJO-Kd-x7x" firstAttribute="top" secondItem="OPr-ki-3YV" secondAttribute="bottom" constant="8" id="Afv-g8-9qU"/>
                         <constraint firstItem="5sH-6e-1Sy" firstAttribute="leading" secondItem="jIl-kY-jHF" secondAttribute="leading" id="CNf-BO-wG3"/>
+                        <constraint firstItem="5sH-6e-1Sy" firstAttribute="top" secondItem="IJO-Kd-x7x" secondAttribute="bottom" constant="7" id="cGt-Xh-zCy"/>
                         <constraint firstItem="IJO-Kd-x7x" firstAttribute="leading" secondItem="jIl-kY-jHF" secondAttribute="leading" id="fNH-zq-JPR"/>
                         <constraint firstAttribute="trailing" secondItem="5sH-6e-1Sy" secondAttribute="trailing" constant="5" id="fTV-e0-ECl"/>
                         <constraint firstAttribute="trailing" secondItem="1Ki-yv-G98" secondAttribute="trailing" constant="5" id="gSn-dA-eNu"/>
                         <constraint firstItem="1Ki-yv-G98" firstAttribute="leading" secondItem="jIl-kY-jHF" secondAttribute="leading" id="jg8-2x-fe3"/>
+                        <constraint firstAttribute="bottom" secondItem="1Ki-yv-G98" secondAttribute="bottom" id="rEM-mS-qRu"/>
                         <constraint firstItem="1Ki-yv-G98" firstAttribute="top" secondItem="5sH-6e-1Sy" secondAttribute="bottom" constant="45" id="tm4-Ek-1GD"/>
                         <constraint firstItem="OPr-ki-3YV" firstAttribute="leading" secondItem="jIl-kY-jHF" secondAttribute="leading" constant="108" id="uZW-zV-eQx"/>
                         <constraint firstAttribute="trailing" secondItem="OPr-ki-3YV" secondAttribute="trailing" constant="112" id="xSs-wU-ZiO"/>
@@ -66,6 +78,12 @@
                 </scrollView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="jIl-kY-jHF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Jc9-WU-6Q8"/>
+                <constraint firstAttribute="trailing" secondItem="jIl-kY-jHF" secondAttribute="trailing" constant="-5" id="NDB-CQ-k0l"/>
+                <constraint firstAttribute="bottom" secondItem="jIl-kY-jHF" secondAttribute="bottom" id="c5n-a2-LYJ"/>
+                <constraint firstItem="jIl-kY-jHF" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="tTP-lo-tPv"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
