custom date picker for birthday, doesn't show year

--- a/Headshot-ios/AccountViewController.xib
+++ b/Headshot-ios/AccountViewController.xib
@@ -52,11 +52,11 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <tableView appearanceType="aqua" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" translatesAutoresizingMaskIntoConstraints="NO" id="1Ki-yv-G98">
-                            <rect key="frame" x="0.0" y="202" width="320" height="302"/>
+                            <rect key="frame" x="0.0" y="185" width="320" height="319"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="302" id="xvL-mK-Uy0"/>
+                                <constraint firstAttribute="height" constant="319" id="xvL-mK-Uy0"/>
                             </constraints>
                         </tableView>
                     </subviews>
@@ -65,13 +65,13 @@
                         <constraint firstAttribute="trailing" secondItem="IJO-Kd-x7x" secondAttribute="trailing" constant="5" id="6nw-K3-AjZ"/>
                         <constraint firstItem="IJO-Kd-x7x" firstAttribute="top" secondItem="OPr-ki-3YV" secondAttribute="bottom" constant="8" id="Afv-g8-9qU"/>
                         <constraint firstItem="5sH-6e-1Sy" firstAttribute="leading" secondItem="jIl-kY-jHF" secondAttribute="leading" id="CNf-BO-wG3"/>
+                        <constraint firstItem="1Ki-yv-G98" firstAttribute="top" secondItem="5sH-6e-1Sy" secondAttribute="bottom" constant="28" id="aap-1a-SCX"/>
                         <constraint firstItem="5sH-6e-1Sy" firstAttribute="top" secondItem="IJO-Kd-x7x" secondAttribute="bottom" constant="7" id="cGt-Xh-zCy"/>
                         <constraint firstItem="IJO-Kd-x7x" firstAttribute="leading" secondItem="jIl-kY-jHF" secondAttribute="leading" id="fNH-zq-JPR"/>
                         <constraint firstAttribute="trailing" secondItem="5sH-6e-1Sy" secondAttribute="trailing" constant="5" id="fTV-e0-ECl"/>
                         <constraint firstAttribute="trailing" secondItem="1Ki-yv-G98" secondAttribute="trailing" constant="5" id="gSn-dA-eNu"/>
                         <constraint firstItem="1Ki-yv-G98" firstAttribute="leading" secondItem="jIl-kY-jHF" secondAttribute="leading" id="jg8-2x-fe3"/>
                         <constraint firstAttribute="bottom" secondItem="1Ki-yv-G98" secondAttribute="bottom" id="rEM-mS-qRu"/>
-                        <constraint firstItem="1Ki-yv-G98" firstAttribute="top" secondItem="5sH-6e-1Sy" secondAttribute="bottom" constant="45" id="tm4-Ek-1GD"/>
                         <constraint firstItem="OPr-ki-3YV" firstAttribute="leading" secondItem="jIl-kY-jHF" secondAttribute="leading" constant="108" id="uZW-zV-eQx"/>
                         <constraint firstAttribute="trailing" secondItem="OPr-ki-3YV" secondAttribute="trailing" constant="112" id="xSs-wU-ZiO"/>
                     </constraints>
